Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p class="product-tag">EURO 5</p>
                     <p class="product-name">Eletricidade e Eletrônica FH4 EURO 5</p>
                     <p class="product-description">Soluções elétricas para FH4 EURO 5 com compatibilidade e performance.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Eletricidade%20e%20Eletrônica%20FH4%20EURO%205" target="_blank" class="btn-curso">Entre em Contato</a>
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
                     <p class="product-tag">Software Scania</p>
                     <p class="product-name">Winols - edição de Arquivos Scania S8</p>
                     <p class="product-description">Versão especializada de Winols para edição de arquivos Scania S8.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Winols%20-%20Edição%20de%20Arquivos%20Scania%20S8" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -123,7 +123,7 @@
                     <p class="product-tag">Diagnóstico</p>
                     <p class="product-name">Diagnóstico Completo do FH4 EURO 6</p>
                     <p class="product-description">Sistema completo de diagnóstico para caminhões FH4, detectando falhas e otimizando performance.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Diagnóstico%20Completo%20do%20FH4%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -136,7 +136,7 @@
                     <p class="product-tag">Motor Scania</p>
                     <p class="product-name">Motor Scania SUPER EURO 6</p>
                     <p class="product-description">Motor Scania de última geração com tecnologia SUPER EURO 6.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Motor%20Scania%20SUPER%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -149,7 +149,7 @@
                     <p class="product-tag">Motor Volvo</p>
                     <p class="product-name">Motor D13K EURO 6</p>
                     <p class="product-description">Motor de alta performance com tecnologia EURO 6.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Motor%20D13K%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -162,7 +162,7 @@
                     <p class="product-tag">Diagnóstico</p>
                     <p class="product-name">Diagnóstico Completo do FH4 EURO 6</p>
                     <p class="product-description">Versão adicional do curso de diagnóstico completo do FH4 EURO 6.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Diagnóstico%20Completo%20do%20FH4%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -175,7 +175,7 @@
                     <p class="product-tag">Eletrônica</p>
                     <p class="product-name">Eletricidade e Eletrônica do FH Clássico</p>
                     <p class="product-description">Soluções completas para caminhões FH clássico.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Eletricidade%20e%20Eletrônica%20do%20FH%20Clássico" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -188,7 +188,7 @@
                     <p class="product-tag">I-SHIFT</p>
                     <p class="product-name">Caixa I-SHIFT Versão F e G</p>
                     <p class="product-description">Transmissão I-SHIFT nas versões F e G com tecnologia de ponta.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Caixa%20I-SHIFT%20Versão%20F%20e%20G" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -201,7 +201,7 @@
                     <p class="product-tag">Parâmetros</p>
                     <p class="product-name">Parâmetros Avançados Volvo</p>
                     <p class="product-description">Ajustes e parâmetros avançados para otimização máxima de caminhões Volvo.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Parâmetros%20Avançados%20Volvo" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -214,7 +214,7 @@
                     <p class="product-tag">Eletrônica</p>
                     <p class="product-name">Eletricidade e Eletrônica VM EURO 6</p>
                     <p class="product-description">Soluções eletrônicas para caminhões VM com tecnologia EURO 6.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Eletricidade%20e%20Eletrônica%20VM%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -227,7 +227,7 @@
                     <p class="product-tag">Eletrônica Scania</p>
                     <p class="product-name">Eletricidade e Eletrônica Scania SUPER EURO 6</p>
                     <p class="product-description">Sistemas elétricos especializados para Scania SUPER EURO 6.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Eletricidade%20e%20Eletrônica%20Scania%20SUPER%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -240,7 +240,7 @@
                     <p class="product-tag">Transmissão</p>
                     <p class="product-name">Caixa VT com Caixa I-SHIFT C e D</p>
                     <p class="product-description">Transmissão automática de alta performance com I-SHIFT C e D.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Caixa%20VT%20com%20Caixa%20I-SHIFT%20C%20e%20D" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -253,7 +253,7 @@
                     <p class="product-tag">Motor VM</p>
                     <p class="product-name">Motor D8K VM EURO 6</p>
                     <p class="product-description">Motor VM com tecnologia avançada, ideal para aplicações de médio porte.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Motor%20D8K%20VM%20EURO%206" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -266,7 +266,7 @@
                     <p class="product-tag">Pneumática</p>
                     <p class="product-name">Sistema Pneumático</p>
                     <p class="product-description">Sistema pneumático completo com componentes de alta qualidade.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Sistema%20Pneumático" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
@@ -279,7 +279,7 @@
                     <p class="product-tag">Pós-Tratamento</p>
                     <p class="product-name">Sistema de Pós Tratamento dos Gases (EURO 5 / EURO 6 / VM)</p>
                     <p class="product-description">Sistema avançado de pós-tratamento para EURO 5, EURO 6 e VM.</p>
-                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20neste%20curso" target="_blank" class="btn-curso">Entre em Contato</a>
+                    <a href="https://wa.me/556293290519?text=Olá%20Suziane%2C%20tenho%20interesse%20no%20curso%3A%20Sistema%20de%20Pós%20Tratamento%20dos%20Gases" target="_blank" class="btn-curso">Entre em Contato</a>
                     </div>
             </div>
 
